--- a/cotton_toolkit/locales/en/LC_MESSAGES/cotton_toolkit.po
+++ b/cotton_toolkit/locales/en/LC_MESSAGES/cotton_toolkit.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: friendly-cotton-genomes-toolkit 1.0.0\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2025-08-13 18:35+0800\n"
-"PO-Revision-Date: 2025-08-13 18:36+0800\n"
+"PO-Revision-Date: 2025-08-13 21:11+0800\n"
 "Last-Translator: PureAmaya <gkoishi0514@gmail.com>\n"
 "Language-Team: Gemini 2.5 Pro\n"
 "Language: en\n"
@@ -3236,8 +3236,8 @@ msgstr "About this software"
 #: ui/gui_app.py:625
 msgid "!! 警告: 配置文件可能包含敏感信息，请勿轻易分享。"
 msgstr ""
-"!! WARNING: The configuration file may contain sensitive information. Please "
-"do not share it lightly."
+"!! WARNING: The configuration file may contain sensitive information. \n"
+"Please do not share it lightly."
 
 #: ui/gui_app.py:630
 msgid "应用并保存"
